--- a/ranked-webapp/src/main/webapp/index.html
+++ b/ranked-webapp/src/main/webapp/index.html
@@ -38,9 +38,11 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.js"></script>
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/app.js"></script>
+<script src="js/services.js.js"></script>
 <script src="js/controllers.js"></script>
 </body>
 </html>
