--- a/ranked-webapp/src/main/webapp/index.html
+++ b/ranked-webapp/src/main/webapp/index.html
@@ -42,7 +42,7 @@
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/app.js"></script>
-<script src="js/services.js.js"></script>
+<script src="js/services.js"></script>
 <script src="js/controllers.js"></script>
 </body>
 </html>
