further development of webapp

--- a/ranked-webapp/src/main/webapp/index.html
+++ b/ranked-webapp/src/main/webapp/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Ranked</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="fragment" content="!" />
+    <!--<base href="/ranked">-->
     <link href="css/bootstrap.css" rel="stylesheet">
     <style>
         body {
