--- a/ranked-webapp/src/main/webapp/index.html
+++ b/ranked-webapp/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ranked">
+<html ng:app="ranked">
 <head>
     <title>Ranked</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
 </head>
-<body>
+<body class="container">
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
@@ -26,9 +26,10 @@
 
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li ng-class="{ active: activePath=='/player' }"><a href="#/player">Players</a></li>
-                    <li ng-class="{ active: activePath=='/tournament' }"><a href="#/tournament">Tournaments</a></li>
-                    <li ng-class="{ active: activePath=='/discipline' }"><a href="#/discipline">Disciplines</a></li>
+                    <li ng:class="{ active: activePath=='/game' }"><a href="#/game">Game</a></li>
+                    <li ng:class="{ active: activePath=='/player' }"><a href="#/player">Players</a></li>
+                    <li ng:class="{ active: activePath=='/tournament' }"><a href="#/tournament">Tournaments</a></li>
+                    <li ng:class="{ active: activePath=='/discipline' }"><a href="#/discipline">Disciplines</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -36,13 +37,15 @@
     </div>
 </div>
 
-<div class="view" ng-view></div>
+<div class="view" ng:view></div>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.js"></script>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.js"></script>-->
+<script src="js/libs/angular.js"></script>
+<script src="js/libs/angular-resource.js"></script>
+<script src="js/libs/jquery.js"></script>
+<script src="js/libs/bootstrap.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
 <script src="js/controllers.js"></script>
