Cleaned up folder structure

--- a/frontend/src/main/resources/static/index.html
+++ b/frontend/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head lang="de">
   <meta charset="UTF-8"/>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
