--- a/frontend/src/main/js/index.html
+++ b/frontend/src/main/js/index.html
@@ -15,5 +15,5 @@
 <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 
-<script type="text/javascript" src="bundle.js"></script></body>
+</body>
 </html>
