--- a/frontend/src/main/js/index.html
+++ b/frontend/src/main/js/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>#Ranked</title>
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="manifest" href="/manifest.json">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
