--- a/frontend/src/main/js/index.html
+++ b/frontend/src/main/js/index.html
@@ -8,16 +8,16 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="/img/icon_ios.png">
   <link rel="manifest" href="/manifest.json">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="/extern/roboto.css" rel="stylesheet">
+  <link href="/extern/material-icons.css" rel="stylesheet">
 </head>
 <body>
 
 <div id="root"></div>
 
 <!-- Dependencies from CDN -->
-<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+<script crossorigin src="/extern/react.production.min.js"></script>
+<script crossorigin src="/extern/react-dom.production.min.js"></script>
 
 </body>
 </html>
